# mobile-facial-recognition-sdk

./: .gitignore  CMakeLists.txt  MODULE.bazel  README.md  ReadMe.md  WORKSPACE  bazel-bin  bazel-facial-recognition-sdk  bazel-out  bazel-testlogs
android/sdk/: build.gradle
android/sdk/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/sdk/src/main/java/com/neptune/sdk/: FaceSDK.kt  types.kt  
android/sdk/src/main/jniLibs/: armeabi-v7a
core/: CMakeLists.txt  models
core/include/neptune/: BUILD  EmotionRecognizer.h  FaceDetector.h  LivenessChecker.h  Log.h  MediaPipeFaceDetector.h  MediaPipeLandmarks.h  NeptuneSDK.h  Preprocess.h  TfLiteEngine.h  Types.h  WebRTCManager.h  landmark_extractor.h
core/src/: BUILD  EmotionRecognizer.cpp  FaceDetector.cpp  LivenessChecker.cpp  MediaPipeFaceDetector.cpp  MediaPipeLandmarks.cpp  NeptuneSDK.cpp  WebRTCManager.cpp  landmark_extractor.cpp
core/src/img/: Preprocess.cpp
core/src/tflite/: TfLiteEngine.cpp
core/src/util/: Log.cpp
core/tests/: BUILD  CMakeLists.txt  face_detection_test.cpp  main_webrtc.cpp  real_time_detection_test.cpp  test_preprocess.cpp
ios/ NeptuneFaceSDK/Frameworks/: TensorFlowLiteC.xcframework
models/: mobilenet_emotion.tflite
